tests/negative/traits/reimpl.orng
trait My_Trait {}

impl My_Trait for Int {}
impl My_Trait for Int {}

fn main() -> Int { 0 }